--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         }
 
         const colors = [
-            '#FF6347', '#FFD700', '#ADFF2F', '#00BFFF', '#FF4500',
-            '#FF1493', '#4B0082', '#00FFFF', '#FFA07A', '#E6E6FA',
-            '#FF8C00', '#20B2AA'
+            '#f58d7d', '#FFD700', '#a2fd07', '#10c1fd', '#FF4500',
+            '#fd0089', '#8e02f8', '#00f5f5', '#012aff', '#E6E6FA',
+            '#FF8C00', '#c31b1b'
         ];
 
         function createParticles(x, y) {
