--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Webinar Spray</title>
+    <title>Webinar and Lesson Spray</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="CSS/style.css" rel="stylesheet"/>
     <script src="HW1.js"></script>
@@ -17,7 +17,7 @@
     <source src="./music/5.mp3" type="audio/mpeg">
 </audio>
 <button id="play-btn" class="btn btn-lg btn-custom-orange mb-4 blinking-button">!!!~НАЖАТЬ~!!!</button>
-<h1 class="text-center fs-1">Webinar HW1 JS</h1>
+<h1 class="text-center fs-1">Webinar and Lesson HW JS</h1>
 <p class="text-center fs-3">Open the console to see the results of the JavaScript code.</p>
 <canvas id="explosion-canvas"></canvas>
 </body>
